<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primer"
        android:alpha="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card"
        android:padding="28dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account"
            android:contentDescription="@string/todo2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mahasiswa_pintar"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:id="@+id/card"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_your_account"
                android:alpha="0.7" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:alpha="0.7"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Email"
                android:hint="Enter Your Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="TextFields"
                android:autofillHints="" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:alpha="0.7"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/enter_your_password"
                android:drawableEnd="@drawable/eye_off"
                android:drawableTint="@color/black"
                android:autofillHints="" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tombol"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                app:cornerRadius="32dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
