<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CRUD_Jurusan.Tambah_Jurusan"
    android:background="@drawable/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/kembali1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:src="@drawable/baseline_arrow_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kode_jurusan_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/kode_jurusan"
        android:background="@android:color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_kode_jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nama_jurusan_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kode_jurusan_layout"
        android:hint="@string/nama_jurusan"
        android:background="@android:color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nama_jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ketua_prodi_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_jurusan_layout"
        android:hint="@string/ketua_prodi"
        android:background="@android:color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_ketua_prodi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_simpan_jurusan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        app:layout_constraintTop_toBottomOf="@id/ketua_prodi_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
