<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CRUD_Mahasiswa.TambahMahasiswa"
    android:background="@drawable/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/kembali1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:src="@drawable/baseline_arrow_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nimmahasiswa"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/nim"
        android:background="@android:color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/inputnimmahasiswa"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/namamahasiswa"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nimmahasiswa"
        android:hint="@string/nama"
        android:background="@android:color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputnamamahasiswa"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alamatmahasiswa"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namamahasiswa"
        android:hint="@string/alamat"
        android:background="@android:color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputalamatmahasiswa"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerjurusan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alamatmahasiswa"
        android:layout_marginTop="10dp"
        android:background="@android:color/white" />

    <com.google.android.material.radiobutton.MaterialRadioButton
    android:background="@color/white"
    android:id="@+id/radio_laki_laki"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Laki-laki"
    android:checked="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/spinnerjurusan"
    android:layout_marginTop="10dp"
    android:layout_marginStart="16dp"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:background="@color/white"
        android:id="@+id/radio_perempuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Perempuan"
        android:checked="false"
        app:layout_constraintStart_toEndOf="@+id/radio_laki_laki"
        app:layout_constraintTop_toBottomOf="@+id/spinnerjurusan"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tanggallahirmahasiswa"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_laki_laki"
        android:hint="Tanggal Lahir (yyyy-mm-dd)"
        android:background="@android:color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputtanggallahirmahasiswa"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ambil_foto"
        android:text="Ambil Foto"
        app:layout_constraintTop_toBottomOf="@id/tanggallahirmahasiswa"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fotomahasiswa"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ambil_foto"
        android:hint="@string/foto"
        android:background="@android:color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputfotomahasiswa"
            android:editable="false"
            android:focusable="false"
            android:clickable="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nohp"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotomahasiswa"
        android:hint="No Hp"
        android:background="@android:color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/inputnohp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnsimpan"
        android:text="@string/simpan"
        app:layout_constraintTop_toBottomOf="@id/nohp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
